# cnn3d_tpms_csma2024

./: README.md  pyproject.toml
cnn_tpms/: _version.py  datasets.py  models.py  train_utils.py  typing.py  utils.py  voxel.py
cnn_tpms/data/: thickness_densities.json
cnn_tpms/data_generation/: lattice_generator.py  surfaces.py
scripts/: generate_dataset.py  train.py
test/: test_models.py
